# ragnaroek-midgard-apache2

./: AUTHORS  INSTALL  Makefile.am  README.md  autogen.sh  configure.ac  midgard-apache2.c  midgard-root-nommp.php  midgard-root.php
dists/OBS/: debian.README.Debian  debian.changelog  debian.control  debian.libapache2-mod-midgard.install  debian.rules  midgard-apache2.dsc  mod_midgard.spec
dists/fedora/: mod_midgard.spec
